feat: implement find all comments
